--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     <input class="checkbox visually-hidden" type="checkbox" name="policy" id="policy"/>
                     <label class="policy" for="policy">
                         <span class="modal__svg">
-                            <svg class="modal__icon" width="16" height="15" >
+                            <svg class="modal__chek" width="16" height="15" >
                                 <use href="./images/new-sprite.svg#icon-check"></use>
                             </svg>
                         </span>
