--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                             <img src="./images/technokriak.jpg" alt="Три создателя веб-сайта на мониторе ноутбука" width="370"/>
                             <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="portfoli__inscription">
+                        <div class="portfolio__inscription">
                             <h2 class="portfolio__title">Технокряк</h2>
                             <p class="portfolio__text">Веб-сайт</p>
                         </div>
