--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <a class="logo" href="#"><span class="logo__blue">Web</span>Studio</a>
                 <ul class="site-nav">
-                    <li class="site-nav__item"><a class="site-nav__link current" href="index.html">Студия</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="index.html">Студия</a></li>
                     <li class="site-nav__item"><a class="site-nav__link" href="portfolio.html">Портфолио</a></li>
                     <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
                 </ul>
@@ -44,10 +44,10 @@
     </header>
     <main>
         <!-- Секция Герой -->
-        <section class="hero-section">
+        <section class="section section__hero">
             <div class="container">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
+                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!-- Секция профиль -->
@@ -310,11 +310,11 @@
         </section>
     </main>
     <!-- Футер -->
-    <footer class="footer-container">
+    <footer class="section__footer">
         <div class="container">
             <div class="footer">
                 <div class="footer-contacts">
-                    <a class="footer__logo" href="#"><span class="logo__blue">Web</span><span class="logo__white">Studio</span></a>
+                    <a class="footer-logo" href="#"><span class="logo__blue">Web</span><span class="footer-logo__white">Studio</span></a>
                     <address>
                         <ul>
                             <li class="footer__item"><a class="footer__address" href="https://goo.gl/maps/HXGFn4gWA6E6knC27">г. Киев, пр-т Леси Украинки, 26</a></li>
