--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a class="logo" href="#"><span class="logo__blue">Web</span>Studio</a>
                 <ul class="site-nav">
                     <li class="site-nav__item"><a class="site-nav__link" href="index.html">Студия</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link current" href="portfolio.html">Портфолио</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="portfolio.html">Портфолио</a></li>
                     <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
                 </ul>
                 <ul class="contacts">
@@ -169,11 +169,11 @@
     </section>
 </main>
     <!-- Футер -->
-    <footer class="footer-container">
+    <footer class="section__footer">
         <div class="container">
             <div class="footer">
                 <div class="footer-contacts">
-                    <a class="footer__logo" href="#"><span class="logo__blue">Web</span><span class="logo__white">Studio</span></a>
+                    <a class="footer-logo" href="#"><span class="logo__blue">Web</span><span class="footer-logo__white">Studio</span></a>
                     <address>
                         <ul>
                             <li class="footer__item"><a class="footer__address" href="https://goo.gl/maps/HXGFn4gWA6E6knC27">г. Киев, пр-т Леси Украинки, 26</a></li>
