--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Портфолио</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"  />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
     <!-- Хедер -->
-    <header class="header-container">
-        <div class="container">
+    <header class="header">
+        <div class="container header__container">
             <nav>
                 <a class="logo" href="#"><span class="logo__blue">Web</span>Studio</a>
                 <ul class="site-nav">
