--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     </a>
                                 </li>
                                 <li class="social-media__item">
-                                    <a class="social-media-link" href="#">
+                                    <a class="social-media__link" href="#">
                                         <svg width="20" height="20" >
                                             <use href="./images/new-sprite.svg#icon-facebook"></use>
                                         </svg> 
