--- a/portfolio.html
+++ b/portfolio.html
@@ -169,16 +169,21 @@
     </section>
 </main>
     <!-- Футер -->
-    <footer class="section__footer">
+    <footer class="footer">
         <div class="container">
-            <div class="footer">
+            <div class="footer__box">
                 <div class="footer-contacts">
-                    <a class="footer-logo" href="#"><span class="logo__blue">Web</span><span class="footer-logo__white">Studio</span></a>
+                    <a class="footer-logo" href="#"><span class="logo__blue">Web</span><span
+                            class="footer-logo__white">Studio</span></a>
                     <address>
                         <ul>
-                            <li class="footer__item"><a class="footer__address" href="https://goo.gl/maps/HXGFn4gWA6E6knC27">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li class="footer__item"><a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li class="footer__item"><a class="footer__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                            <li class="footer__item"><a class="footer__address"
+                                    href="https://goo.gl/maps/HXGFn4gWA6E6knC27">г. Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="footer__item"><a class="footer__link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="footer__item"><a class="footer__link" href="tel:+380961111111">+38 096 111 11
+                                    11</a></li>
                         </ul>
                     </address>
                 </div>
@@ -187,32 +192,32 @@
                     <ul class="footer-social-media">
                         <li class="footer-social-media__item">
                             <a class="footer-social-media__link" href="#">
-                                <svg width="20" height="20" >
+                                <svg width="20" height="20">
                                     <use href="./images/new-sprite.svg#icon-instagram"></use>
-                                </svg> 
+                                </svg>
                             </a>
                         </li>
                         <li class="footer-social-media__item">
                             <a class="footer-social-media__link" href="#">
-                                <svg width="20" height="20" >
+                                <svg width="20" height="20">
                                     <use href="./images/new-sprite.svg#icon-twitter"></use>
-                                </svg> 
+                                </svg>
                             </a>
                         </li>
                         <li class="footer-social-media__item">
                             <a class="footer-social-media__link" href="#">
-                                <svg width="20" height="20" >
+                                <svg width="20" height="20">
                                     <use href="./images/new-sprite.svg#icon-facebook"></use>
-                                </svg> 
+                                </svg>
                             </a>
                         </li>
                         <li class="footer-social-media__item">
                             <a class="footer-social-media__link" href="#">
-                                <svg width="20" height="20" >
+                                <svg width="20" height="20">
                                     <use href="./images/new-sprite.svg#icon-linkedin"></use>
-                                </svg> 
+                                </svg>
                             </a>
-                        </li> 
+                        </li>
                     </ul>
                 </div>
                 <div class="subscribe">
@@ -220,7 +225,7 @@
                     <form class="subscribe__form" action="#">
                         <input class="subscribe__input" type="email" name="user-email" placeholder="E-mail">
                         <button class="subscribe__button" type="button">Подписаться
-                            <svg class="subscribe__button-send" width="24" height="24" >
+                            <svg class="subscribe__button-send" width="24" height="24">
                                 <use href="./images/new-sprite.svg#icon-send"></use>
                             </svg>
                         </button>
